force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <description>Represents an applicant who might apply for one or more positions.</description>
    <label>Candidate</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
        <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <label>Institution Name</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Field_of_Study__c</fullName>
        <label>Field of Study</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <type>Number</type>
        <precision>3</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <picklist>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teamwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Solving</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Certification_Name__c</fullName>
        <label>Certification Name</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Issuing_Organization__c</fullName>
        <label>Issuing Organization</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Earned_Date__c</fullName>
        <label>Earned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Portfolio_Website__c</fullName>
        <label>Portfolio/Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Awards_Achievements__c</fullName>
        <label>Awards/Achievements</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>