force-app/main/default/objects/Candidate__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>TEXT( YEAR(Today())  - YEAR(Date_of_Birth__c)) &amp; &quot; Years&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>