force-app/main/default/objects/Candidate__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company name where candidate is currently working on</description>
    <inlineHelpText>Company name where candidate is currently working on</inlineHelpText>
    <label>Company Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>