force-app/main/default/objects/Candidate__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>job title where the candidate was working</description>
    <inlineHelpText>job title where the candidate was working</inlineHelpText>
    <label>Job Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>