force-app/main/default/objects/Candidate__c/fields/Month_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Birth__c</fullName>
    <formula>text(MONTH( Date_of_Birth__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of Birth</label>
    <type>Text</type>
</CustomField>