force-app/main/default/objects/Candidate__c/fields/No_Longer_Interested__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is the checkbox that defines that whether the candidate is interested or not</description>
    <inlineHelpText>this is the checkbox that defines that whether the candidate is interested or not</inlineHelpText>
    <label>No Longer Interested</label>
    <type>Checkbox</type>
</CustomField>