force-app/main/default/objects/Candidate__c/fields/Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities__c</fullName>
    <label>Job Responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>