force-app/main/default/objects/Candidate__c/validationRules/check_dob.validationRule-meta.xml
<ValidationRule>
    <fullName>check_dob</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Date of birth cannot be greater than today&apos;s date.</errorMessage>
</ValidationRule>