force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Age__c</columns>
    <columns>City__c</columns>
    <columns>Contact__c</columns>
    <columns>Country__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Education__c</columns>
    <columns>Mobile__c</columns>
    <columns>Month_of_Birth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>